--- a/src/main/webapp/resources/composite/navigationMember.xhtml
+++ b/src/main/webapp/resources/composite/navigationMember.xhtml
@@ -28,6 +28,7 @@
                 <dl>
                     <dt>#{i18n['Customer Service']}</dt>
                     <dd><p:link outcome="/member/feedback/index" value="#{i18n['My Feedbacks']}"/></dd>
+                    <dd><p:link outcome="/member/feedback/new" value="#{i18n['New Feedback']}"/></dd>
                 </dl>
             </h:panelGroup>
 
