--- a/src/main/webapp/member/sale/track.xhtml
+++ b/src/main/webapp/member/sale/track.xhtml
@@ -16,11 +16,11 @@
                         <h:form>
                             <h:panelGrid columns="2">
                                 <p:outputLabel for="orderRef" value="#{i18n['Order Ref']}"/>
-                                <p:inputText id="orderRef" value="#{trackBean.orderRef}" label="#{i18n['Order Ref']}" placeholder="#{i18n['Order Ref']}" required="true"/>
+                                <p:inputText id="orderRef" value="#{trackView.orderRef}" label="#{i18n['Order Ref']}" placeholder="#{i18n['Order Ref']}" required="true"/>
                                 <p:outputLabel for="email" value="#{i18n['E-mail Address']}"/>
-                                <p:inputText id="email" value="#{trackBean.email}" label="#{i18n['E-mail Address']}" placeholder="#{i18n['E-mail Address']}" required="true"/>
+                                <p:inputText id="email" value="#{trackView.email}" label="#{i18n['E-mail Address']}" placeholder="#{i18n['E-mail Address']}" required="true"/>
                             </h:panelGrid>
-                            <p:commandButton value="#{i18n['Track your order']}" actionListener="#{trackBean.doSubmit}" update="@form, :growl" />
+                            <p:commandButton value="#{i18n['Track your order']}" actionListener="#{trackView.doSubmit}" update="@form, :growl" />
                         </h:form>
                     </div>
                 </div>
