--- a/src/main/webapp/member/address.xhtml
+++ b/src/main/webapp/member/address.xhtml
@@ -47,8 +47,8 @@
                     <p:inputText id="lastname" value="#{addressView.selectedRecord.lastname}" label="#{i18n['Lastname']}" placeholder="#{i18n['Lastname']}" required="true"/>
                     <p:outputLabel for="phone" value="#{i18n['Phone Number']}"/>
                     <p:inputText id="phone" value="#{addressView.selectedRecord.phone}" label="#{i18n['Phone Number']}" placeholder="#{i18n['Phone Number']}" required="true"/>
-                    <p:outputLabel for="line" value="#{i18n['Line']}"/>
-                    <p:inputText id="line" value="#{addressView.selectedRecord.line}" label="#{i18n['Line']}" placeholder="#{i18n['Line']}" required="true"/>
+                    <p:outputLabel for="address" value="#{i18n['Address']}"/>
+                    <p:inputText id="address" value="#{addressView.selectedRecord.address}" label="#{i18n['Address']}" placeholder="#{i18n['Address']}" required="true"/>
                     <p:outputLabel for="zipcode" value="#{i18n['Zip Code']}"/>
                     <p:inputText id="zipcode" value="#{addressView.selectedRecord.zipcode}" label="#{i18n['Zip Code']}" placeholder="#{i18n['Zip Code']}" required="true"/>
                     <p:outputLabel for="county" value="#{i18n['County']}"/>
@@ -76,8 +76,8 @@
                     <p:inputText id="lastname" value="#{addressView.newRecord.lastname}" label="#{i18n['Lastname']}" placeholder="#{i18n['Lastname']}" required="true"/>
                     <p:outputLabel for="phone" value="#{i18n['Phone Number']}"/>
                     <p:inputText id="phone" value="#{addressView.newRecord.phone}" label="#{i18n['Phone Number']}" placeholder="#{i18n['Phone Number']}" required="true"/>
-                    <p:outputLabel for="line" value="#{i18n['Line']}"/>
-                    <p:inputText id="line" value="#{addressView.newRecord.line}" label="#{i18n['Line']}" placeholder="#{i18n['Line']}" required="true"/>
+                    <p:outputLabel for="address" value="#{i18n['Address']}"/>
+                    <p:inputText id="address" value="#{addressView.newRecord.address}" label="#{i18n['Address']}" placeholder="#{i18n['Address']}" required="true"/>
                     <p:outputLabel for="zipcode" value="#{i18n['Zip Code']}"/>
                     <p:inputText id="zipcode" value="#{addressView.newRecord.zipcode}" label="#{i18n['Zip Code']}" placeholder="#{i18n['Zip Code']}" required="true"/>
                     <p:outputLabel for="county" value="#{i18n['County']}"/>
