--- a/src/main/webapp/contracts/omega-layout/topbar.xhtml
+++ b/src/main/webapp/contracts/omega-layout/topbar.xhtml
@@ -22,7 +22,7 @@
                     <input type="text" placeholder="#{i18n['Search']}" />
                     <span class="topbar-search-icon fa fa-search"></span>
                 </span>
-                <p:link outcome="/administrator/feedback">
+                <p:link outcome="/administrator/feedback/index">
                     <span class="topbar-item-text">#{i18n['Messages']}</span>
                     <span class="topbar-icon fa fa-envelope-o animated swing"></span>
                     <span class="topbar-badge animated rubberBand">5</span>
