--- a/src/main/webapp/member/feedback/index.xhtml
+++ b/src/main/webapp/member/feedback/index.xhtml
@@ -32,7 +32,7 @@
                                     </h:outputFormat>
                                 </p:column>
                                 <p:column headerText="#{i18n['Fullname']}">
-                                    <h:outputText value="#{feedback.createdBy.fullname}"/>
+                                    <h:outputText value="#{feedback.user.fullname}"/>
                                 </p:column>
                                 <p:column headerText="#{i18n['Subject']}">
                                     <p:link outcome="/member/feedback/show" value="#{feedback.subject}">
