--- a/src/main/webapp/administrator/ticket/index.xhtml
+++ b/src/main/webapp/administrator/ticket/index.xhtml
@@ -8,29 +8,23 @@
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <h1>#{i18n['Feedbacks']}</h1>
+                    <h1>#{i18n['Tickets']}</h1>
                     <p>Use this page to start from scratch and place your custom content.</p>
                     <h:form id="form">
                         <p:poll interval="60" update="dataTable"/>
-                        <p:dataTable id="dataTable" value="#{feedbackController.lazyModel}" var="feedback" emptyMessage="#{i18n['No records found']}"
+                        <p:dataTable id="dataTable" value="#{ticketController.lazyModel}" var="ticket" emptyMessage="#{i18n['No records found']}"
                                      paginator="true" paginatorPosition="bottom" rows="10" 
-                                     rowKey="#{feedback.id}" selectionMode="single" selection="#{feedbackController.selectedRecord}"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      currentPageReportTemplate="Showing {startRecord}-{endRecord} out of {totalRecords}"
                                      sortMode="multiple" 
                                      lazy="true" rowsPerPageTemplate="10,15,50">
-                            <p:column headerText="#{i18n['Created At']}">
-                                <h:outputFormat value="#{feedback.createdAt}">
-                                    <f:convertDateTime locale="#{localeBean.locale}" type="both"/>
-                                </h:outputFormat>
+                            <p:column headerText="#{i18n['Ticket Type']}">
+                                <p:link outcome="/administrator/ticket/show" value="#{i18n[ticket.ticketType]}">
+                                    <f:param name="id" value="#{ticket.id}"/>
+                                </p:link>
                             </p:column>
                             <p:column headerText="#{i18n['Fullname']}">
-                                <h:outputText value="#{feedback.user.fullname}"/>
-                            </p:column>
-                            <p:column headerText="#{i18n['Subject']}">
-                                <p:link outcome="/administrator/feedback/show" value="#{feedback.subject}">
-                                    <f:param name="uuid" value="#{feedback.uuid}"/>
-                                </p:link>
+                                <h:outputText value="#{ticket.createdBy.fullname}"/>
                             </p:column>
                         </p:dataTable>
                     </h:form>
