--- a/src/main/webapp/administrator/ticket/show.xhtml
+++ b/src/main/webapp/administrator/ticket/show.xhtml
@@ -9,31 +9,31 @@
                 template="/template.xhtml">
     <ui:define name="content">
         <f:metadata>
-            <f:viewParam name="uuid" value="#{feedbackController.uuid}"/>
-            <f:event type="preRenderView" listener="#{feedbackController.onLoad}"/>
+            <f:viewParam name="id" value="#{ticketmessageController.id}"/>
+            <f:event type="preRenderView" listener="#{ticketmessageController.onLoad}"/>
         </f:metadata>
 
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <h1>#{i18n['Feedback']}</h1>
+                    <h1>#{i18n['Ticket']}</h1>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                     <h:form>
-                        <ui:repeat value="#{feedbackController.feedbacks}" var="feedback">
-                            <h:outputFormat value="#{feedback.createdAt}">
+                        <ui:repeat value="#{ticketmessageController.ticketmessages}" var="ticketmessage">
+                            <h:outputFormat value="#{ticketmessage.createdAt}">
                                 <f:convertDateTime locale="#{localeBean.locale}" type="both"/>
                             </h:outputFormat>
-                            <h3><h:outputText value="#{feedback.subject}"/></h3>
-                            <p><h:outputText value="#{feedback.message}"/></p>
+                            <h3><h:outputText value="#{i18n[ticketmessage.ticket.ticketType]}"/></h3>
+                            <p><h:outputText value="#{ticketmessage.content}"/></p>
                             <hr/>
                         </ui:repeat>
 
                         <h:panelGrid columns="2">
-                            <p:outputLabel for="message" value="#{i18n['Message']}"/>
-                            <p:inputTextarea id="message" value="#{feedbackController.message}" label="#{i18n['Message']}" placeholder="#{i18n['Message']}" required="true"/>
+                            <p:outputLabel for="content" value="#{i18n['Content']}"/>
+                            <p:inputTextarea id="content" value="#{ticketmessageController.newRecord.content}" label="#{i18n['Content']}" placeholder="#{i18n['Content']}" required="true"/>
                         </h:panelGrid>
-                        <p:commandButton value="#{i18n['Reply']}" actionListener="#{feedbackController.doReplyRecord}" update="@form, :growl" />
+                        <p:commandButton value="#{i18n['Reply']}" actionListener="#{ticketmessageController.doReplyRecord}" update="@form, :growl" />
                     </h:form>
                 </div>
             </div>
