--- a/src/main/webapp/member/ticket/new.xhtml
+++ b/src/main/webapp/member/ticket/new.xhtml
@@ -19,12 +19,15 @@
                     <div class="ui-g-9">
                         <h:form>
                             <h:panelGrid columns="2">
-                                <p:outputLabel for="subject" value="#{i18n['Subject']}"/>
-                                <p:inputText id="subject" value="#{feedbackView.newRecord.subject}" autocomplete="off" label="#{i18n['Subject']}" placeholder="#{i18n['Subject']}" required="true"/>
-                                <p:outputLabel for="message" value="#{i18n['Message']}"/>
-                                <p:inputTextarea id="message" value="#{feedbackView.newRecord.message}" label="#{i18n['Message']}" placeholder="#{i18n['Message']}" required="true"/>
+                                <p:outputLabel for="ticketType" value="#{i18n['Ticket Type']}" />
+                                <p:selectOneMenu id="ticketType" value="#{ticketView.ticketType}" label="#{i18n['Ticket Type']}" converter="#{ticketTypeConverter}" required="true">
+                                    <f:selectItems value="#{ticketView.ticketTypes}" var="ticketType" itemValue="#{ticketType}" itemLabel="#{i18n[ticketType]}" />
+                                </p:selectOneMenu>
+
+                                <p:outputLabel for="content" value="#{i18n['Content']}"/>
+                                <p:inputTextarea id="content" value="#{ticketView.content}" label="#{i18n['Content']}" placeholder="#{i18n['Content']}" required="true"/>
                             </h:panelGrid>
-                            <p:commandButton value="#{i18n['Submit']}" actionListener="#{feedbackView.doSubmit}" update="@form, :growl" />
+                            <p:commandButton value="#{i18n['Submit']}" actionListener="#{ticketView.doCreateRecord}" update="@form, :growl" />
                         </h:form>
                     </div>
                 </div>
