--- a/src/main/webapp/resources/composite/navigationMember.xhtml
+++ b/src/main/webapp/resources/composite/navigationMember.xhtml
@@ -27,8 +27,8 @@
                 </dl>
                 <dl>
                     <dt>#{i18n['Customer Service']}</dt>
-                    <dd><p:link outcome="/member/feedback/index" value="#{i18n['My Feedbacks']}"/></dd>
-                    <dd><p:link outcome="/member/feedback/new" value="#{i18n['New Feedback']}"/></dd>
+                    <dd><p:link outcome="/member/ticket/index" value="#{i18n['My Tickets']}"/></dd>
+                    <dd><p:link outcome="/member/ticket/new" value="#{i18n['New Ticket']}"/></dd>
                 </dl>
             </h:panelGroup>
 
