--- a/src/main/webapp/member/ticket/show.xhtml
+++ b/src/main/webapp/member/ticket/show.xhtml
@@ -24,18 +24,18 @@
                     </div>
                     <div class="ui-g-9">
                         <h:form>
+                            <h3><h:outputText value="#{i18n[ticketmessageView.selectedTicket.ticketType]}"/></h3>
+
                             <ui:repeat value="#{ticketmessageView.ticketmessages}" var="ticketmessage">
                                 <h:outputFormat value="#{ticketmessage.createdAt}">
                                     <f:convertDateTime locale="#{localeBean.locale}" type="both"/>
                                 </h:outputFormat>
-                                <h3><h:outputText value="#{i18n[ticketmessage.ticket.ticketType]}"/></h3>
                                 <p><h:outputText value="#{ticketmessage.content}"/></p>
                                 <hr/>
                             </ui:repeat>
 
-                            <h:panelGrid columns="2">
-                                <p:outputLabel for="content" value="#{i18n['Content']}"/>
-                                <p:inputTextarea id="content" value="#{ticketmessageView.newRecord.content}" label="#{i18n['Content']}" placeholder="#{i18n['Content']}" required="true" />
+                            <h:panelGrid columns="1">
+                                <p:inputTextarea value="#{ticketmessageView.newRecord.content}" label="#{i18n['Content']}" placeholder="#{i18n['Content']}" required="true" />
                             </h:panelGrid>
                             <p:commandButton value="#{i18n['Reply']}" actionListener="#{ticketmessageView.doReplyRecord}" update="@form, :growl" />
                         </h:form>
