--- a/src/main/webapp/member/ticket/index.xhtml
+++ b/src/main/webapp/member/ticket/index.xhtml
@@ -10,19 +10,23 @@
         <div id="indexpage">
             <div class="indexpage-content">
                 <h1>#{i18n['Tickets']}</h1>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
                     <div class="ui-g-3">
                         <composite:navigationMember/>
                     </div>
                     <div class="ui-g-9">
-                        <h:form>
+                        <h:form id="form">
                             <p:dataTable id="dataTable" value="#{ticketView.lazyModel}" var="ticket" emptyMessage="#{i18n['No records found']}"
                                          paginator="true" paginatorPosition="bottom" rows="10" 
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                          currentPageReportTemplate="Showing {startRecord}-{endRecord} out of {totalRecords}"
                                          sortMode="multiple" 
                                          lazy="true" rowsPerPageTemplate="10,15,50">
+                                <f:facet name="header">
+                                    <p:commandButton value="#{i18n['Create a new record']}" title="#{i18n['Create a new record']}" onclick="PF('newDialog').show();" icon="ui-icon-plus"/>
+                                </f:facet>
                                 <p:column headerText="#{i18n['Ticket Type']}">
                                     <p:link outcome="/member/ticket/show" value="#{i18n[ticket.ticketType]}">
                                         <f:param name="id" value="#{ticket.id}" />
@@ -37,5 +41,22 @@
                 </div>
             </div>
         </div>
+    </ui:define>
+    <ui:define name="dialog">
+        <h:form id="newForm">
+            <p:dialog id="newDlg" header="#{i18n['Create a new record']}" widgetVar="newDialog" resizable="false" closeOnEscape="true" modal="true">
+                <p:panelGrid columns="2">
+                    <p:outputLabel for="ticketType" value="#{i18n['Ticket Type']}" />
+                    <p:selectOneMenu id="ticketType" value="#{ticketView.ticketType}" label="#{i18n['Ticket Type']}" converter="#{ticketTypeConverter}" required="true">
+                        <f:selectItems value="#{ticketView.ticketTypes}" var="ticketType" itemValue="#{ticketType}" itemLabel="#{i18n[ticketType]}" />
+                    </p:selectOneMenu>
+                    <p:outputLabel for="content" value="#{i18n['Content']}"/>
+                    <p:inputTextarea id="content" value="#{ticketView.content}" label="#{i18n['Content']}" placeholder="#{i18n['Content']}" required="true"/>
+                </p:panelGrid>
+                <f:facet name="footer">
+                    <p:commandButton value="#{i18n['Save']}" update=":form:dataTable, :growl" oncomplete="handleSubmitRequest(xhr, status, args, 'newDlg','newForm','newDialog');" actionListener="#{ticketView.doCreateRecord}" />
+                </f:facet>
+            </p:dialog>
+        </h:form>
     </ui:define>
 </ui:composition>
