--- a/src/main/webapp/member/sale/index.xhtml
+++ b/src/main/webapp/member/sale/index.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="content">
         <div id="indexpage">
             <div class="indexpage-content">
-                <h1>#{i18n['My Orders']}</h1>
+                <h1>#{i18n['Orders']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
