--- a/src/main/webapp/member/shopping/shopping.xhtml
+++ b/src/main/webapp/member/shopping/shopping.xhtml
@@ -14,7 +14,7 @@
 
         <div id="indexpage">
             <div class="indexpage-content">
-                <h1>#{i18n['My Shopping Basket']}</h1>
+                <h1>#{i18n['Shopping Basket']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
