--- a/src/main/webapp/member/logininformation.xhtml
+++ b/src/main/webapp/member/logininformation.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="content">
         <div id="indexpage">
             <div class="indexpage-content">
-                <h1>#{i18n['My Login Information']}</h1>
+                <h1>#{i18n['Login Information']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
